Ajustando nome do projeto e versão no package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ads-nodejs",
-  "version": "1.0.0",
+  "name": "ads-nodejs2",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
