criação de api com o json-server

--- a/aulas/aula02/package.json
+++ b/aulas/aula02/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "json-server": "^1.0.0-alpha.23",
     "readline-sync": "^1.4.10"
   }
 }
