--- a/aulas/aula11/package.json
+++ b/aulas/aula11/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "aula10",
+  "name": "aula11",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon -e yaml,js ./bin/www",
-    "test": "jest --watchAll"
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,14 +12,10 @@
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.4",
-    "morgan": "~1.9.1",
-    "swagger-ui-express": "^5.0.0",
-    "yaml": "^2.4.2"
+    "mongoose": "^8.4.0",
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.0",
-    "supertest": "^7.0.0"
+    "nodemon": "^3.1.0"
   }
 }
